@@ -3,3 +3,4 @@
 
 1.1
  * Updated to 5.0.x API
+ * Ported Rogue buttons from ComboMeal addon
